my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EVLALEN/EVLALEN.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EVLALEN.dml:9:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EVLALEN.dml:13:26: error EVLALEN: '.len' cannot be used with variable-length arrays
